--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -25,6 +25,7 @@ header {
   background-color: #fff;
   min-width: 100%;
   height: 52px;
+  box-shadow: 0px 0.5px 4px 0 #b2b2b2;
 }
 
 /* logo */
@@ -75,7 +76,7 @@ nav ul li i {
   cursor: pointer;
 }
 
-nav ul li i:hover, nav ul li:hover {
+nav ul li i:hover/* , nav ul li:hover */ {
   color: var(--hover-color);
 }
 
@@ -90,6 +91,7 @@ nav ul li i:hover, nav ul li:hover {
   width: 220px;
   border-radius: 5px;
   background-color: var(--grey-login);
+  box-shadow: 0.5px 1px 4px 0 #b2b2b2;
 }
 
 .clm1-bg {
@@ -145,6 +147,7 @@ nav ul li i:hover, nav ul li:hover {
   width: 520px;
   background-color: var(--grey-login);
   border-radius: 5px;
+  box-shadow: 0.5px 1px 4px 0 #b2b2b2;
 }
 
 .clm2-img {
@@ -178,9 +181,12 @@ input::placeholder {
   padding: 10px 30px;
 }
 
+.media div {
+  cursor: pointer;
+}
+
 .media i {
   color: var(--logo-color-2);
-  cursor: pointer;
 }
 
 /* main column 3 */
@@ -191,14 +197,17 @@ input::placeholder {
   background-color: var(--grey-login);
   border-radius: 5px;
   overflow: scroll;
+  box-shadow: 0.5px 0px 4px 0 #b2b2b2;
 }
 
 .column3 p {
-  font-size: 20px;
+  text-align: left;
+  margin: 0px 10px;
+  font-size: 18px;
   font-weight: 500;
   padding: 20px 0px;
-  text-decoration: underline;
-  color: var(--logo-color);
+  /* text-decoration: underline; */
+  color: #696B6E;
 }
 
 .users {
@@ -232,6 +241,7 @@ input::placeholder {
   background-color: var(--app-background-white);
   text-align: center;
   height: 45px;
+  box-shadow: 0.5px 2px 4px 2px #b2b2b2;
 }
 
 .box {
