--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -21,6 +21,10 @@ body {
   margin-inline: auto;
 }
 
+* {
+  scrollbar-color: var(--logo-color) #fff;
+}
+
 header {
   background-color: #fff;
   min-width: 100%;
@@ -60,7 +64,7 @@ header {
 nav {
   padding: 10px;
   list-style: none;
-  margin-right: 20px;
+  margin-right: 5px;
 }
 
 nav ul li p {
@@ -75,20 +79,27 @@ nav ul li p {
 .home {
   color: var(--hover-color);
 }
+nav ul li {
+  margin-left: 40px;
+}
 
 nav ul li i {
   font-size: 19px;
   text-decoration: none;
   font-weight: 100;
   color: var(--logo-color);
-  letter-spacing: 0.2px;
+  letter-spacing: 0.5px;
   cursor: pointer;
-  margin-left: 60px;
-  translate: -50px 0;
+  margin-left: 10px;
   text-align: center;
 }
 
-nav ul li i:hover, nav li p:hover {
+nav ul li:hover i{
+  color: var(--hover-color);
+  transition: color 250ms ease-in-out;
+}
+
+nav ul li:hover p{
   color: var(--hover-color);
   transition: color 250ms ease-in-out;
 }
@@ -102,7 +113,6 @@ nav ul li i:hover, nav li p:hover {
   height: 35px;
   width: 35px;
   border: 2px solid var(--logo-color-2);
-  margin-right: 5px;
 }
 
 /* columns */
@@ -240,7 +250,7 @@ input::placeholder {
 }
 
 .column3 p {
-  text-align: left;
+  text-align: center;
   font-size: 18px;
   font-weight: 500;
   padding: 20px 10px;
