--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -13,7 +13,7 @@
 }
 
 body {
-  background-color: #f9f9f9;
+  background-color: #f0f2f5;
 }
 
 .container {
@@ -240,8 +240,9 @@ input::placeholder {
   text-align: center;
   width: 300px;
   border-radius: 5px;
-  box-shadow: 0.5px 0px 4px 0 #b2b2b2;
+  box-shadow: 0.5px 1px 4px 0 #b2b2b2;
   background-color: #f5f5f5;
+  margin-bottom: 10px;
 }
 
 .people {
@@ -250,7 +251,7 @@ input::placeholder {
   scrollbar-width: none;
   scrollbar-color: var(--logo-color) #fff;/* if some broser shows scroll then 
   the color will be applied maybe */
-  height: calc(100dvh - 186px);
+  height: calc(100dvh - 196px);
 }
 
 .column3 p {
